--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,50 +27,33 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Configure gcloud
-        run: gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-
-      - name: Install MySQL client & Cloud SQL Auth Proxy
+      - name: Install gcloud cli
+        uses: google-github-actions/setup-gcloud@v2
+      
+      - name: Start Cloud SQL Auth Proxy using gcloud CLI
         run: |
-          sudo apt-get update && sudo apt-get install -y mysql-client netcat-openbsd
-          wget https://storage.googleapis.com/cloud-sql-connectors/cloud-sql-proxy/v2.11.4/cloud-sql-proxy.linux.amd64 -O cloud-sql-proxy
-          chmod +x cloud-sql-proxy
+          gcloud auth activate-service-account --key-file=<(echo "${{ secrets.GCP_SA_KEY }}")
+          gcloud sql connect $INSTANCE_CONNECTION_NAME \
+            --user=$DB_USER \
+            --quiet &
+        env:
+          INSTANCE_CONNECTION_NAME: project-capstone-468109:australia-southeast1:jc3dn-998-db
+          DB_USER: ${{ secrets.DB_USER }}
 
-      - name: Start Cloud SQL Proxy (TCP mode)
+      - name: Install MySQL Client
+        run: sudo apt-get install -y mysql-client
+      
+      - name: Wait for proxy
+        run: sleep 5
+      
+      - name: Test DB Connection
         run: |
-          ./cloud-sql-proxy $DB_INSTANCE_CONNECTION_NAME=tcp:3306 \
-            --credentials-file=<(echo '${{ secrets.GCP_SA_KEY }}') &
-          
-          # Wait for port 3306 to be ready
-          for i in {1..10}; do
-            nc -z 127.0.0.1 3306 && break
-            echo "⏳ Waiting for Cloud SQL Proxy..."
-            sleep 2
-          done
-
-      - name: Check if DB schema changed
-        id: db_changed
-        run: |
-          if git diff --quiet HEAD^ HEAD -- src/app/lib/server/db_schema/; then
-            echo "changed=false" >> $GITHUB_OUTPUT
-          else
-            echo "changed=true" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Initialize MySQL database
-        if: steps.db_changed.outputs.changed == 'true' || github.event.inputs.init_db == 'true'
-        run: |
-          echo "Running DB initialization..."
-          mysql -u"${{ secrets.DB_USER }}" \
-                -p"${{ secrets.DB_PASSWORD }}" \
-                --host 127.0.0.1 \
-                --database="${{ secrets.DB_NAME }}" <<'EOSQL'
-          START TRANSACTION;
-          SOURCE src/app/lib/server/db_schema/db_drop.sql;
-          SOURCE src/app/lib/server/db_schema/db_create.sql;
-          SOURCE src/app/lib/server/db_schema/db_load.sql;
-          COMMIT;
-          EOSQL
+          mysql --user=${{ secrets.DB_USER }} \
+                --password=${{ secrets.DB_PASS }} \
+                --host=127.0.0.1 \
+                --port=3306 \
+                ${{ secrets.DB_NAME }} \
+                -e "SELECT NOW();"
 
       - name: Build & Push Docker image
         run: |
