--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,33 +23,19 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v1
+        uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Install gcloud cli
-        uses: google-github-actions/setup-gcloud@v2
-      
-      - name: Install Cloud SQL Auth Proxy
-        run: |
-          curl -o cloud-sql-proxy https://dl.google.com/cloudsql/cloud-sql-proxy.linux.amd64
-          chmod +x cloud-sql-proxy
-
-      - name: Start Cloud SQL Proxy
-        run: |
-          echo '${{ secrets.GCP_SA_KEY }}' > sa-key.json
-          ./cloud-sql-proxy \
-            --credentials-file=sa-key.json \
-            $INSTANCE_CONNECTION_NAME &
-        env:
-          INSTANCE_CONNECTION_NAME: project-capstone-468109:australia-southeast1:jc3dn-998-db
-
+      - name: Start Cloud SQL Auth Proxy
+        uses: google-github-actions/cloud-sql-proxy@v2
+        with:
+          instance_connection_name: project-capstone-468109:australia-southeast1:jc3dn-998-db
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+            
       - name: Install MySQL Client
         run: sudo apt-get install -y mysql-client
-      
-      - name: Wait for proxy
-        run: sleep 5
-      
+            
       - name: Test DB Connection
         run: |
           mysql --user=${{ secrets.DB_USER }} \
