fix connection to mysql error

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,6 +32,7 @@ jobs:
         with:
           key: ${{ secrets.GCP_SA_KEY }}
           connection: project-capstone-468109:australia-southeast1:jc3dn-998-db
+          sleep: 5
           port: 3306
             
       - name: Install MySQL Client
