--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -53,15 +53,7 @@ jobs:
           --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/nextjs-app \
           --project ${{ secrets.GCP_PROJECT_ID }} \
           --timeout=900 \
-          --build-arg DB_HOST=/cloudsql/$DB_INSTANCE_CONNECTION_NAME \
-          --build-arg DB_USER=${{ secrets.DB_USER }} \
-          --build-arg DB_PASS=${{ secrets.DB_PASSWORD }} \
-          --build-arg DB_NAME=${{ secrets.DB_NAME }} \
-          --build-arg BETTER_AUTH_SECRET=${{ secrets.BETTER_AUTH_SECRET }} \
-          --build-arg BETTER_AUTH_URL=${{ secrets.BETTER_AUTH_URL }} \
-          --build-arg GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} \
-          --build-arg GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} \
-          --build-arg BASE_URL=${{ secrets.BASE_URL }} \
+          --config cloudbuild.yaml
 
       - name: Deploy to Cloud Run
         run: |
