move build files to root directory

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -65,7 +65,7 @@ jobs:
           gcloud builds submit \          
           --project ${{ secrets.GCP_PROJECT_ID }} \
           --timeout=900 \
-          --config \          
+          --config cloudbuild.yaml\          
           .
 
       - name: Deploy to Cloud Run
