skip init db step

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -44,20 +44,20 @@ jobs:
       - name: Install MySQL Client
         run: sudo apt-get install -y mysql-client            
       
-      - name: Initialize MySQL database
-        working-directory: ${{ github.workspace }}
-        run: |
-          mysql --user=${{ secrets.DB_USER }} \
-                --password=${{ secrets.DB_PASS }} \
-                --host=127.0.0.1 \
-                --port=3306 \
-                --database="${{ secrets.DB_NAME }}" <<'EOSQL'
-          START TRANSACTION;
-          SOURCE src/lib/server/db_schema/db_drop.sql;
-          SOURCE src/lib/server/db_schema/db_create.sql;
-          SOURCE src/lib/server/db_schema/db_load.sql;
-          COMMIT;
-          EOSQL
+      # - name: Initialize MySQL database
+      #   working-directory: ${{ github.workspace }}
+      #   run: |
+      #     mysql --user=${{ secrets.DB_USER }} \
+      #           --password=${{ secrets.DB_PASS }} \
+      #           --host=127.0.0.1 \
+      #           --port=3306 \
+      #           --database="${{ secrets.DB_NAME }}" <<'EOSQL'
+      #     START TRANSACTION;
+      #     SOURCE src/lib/server/db_schema/db_drop.sql;
+      #     SOURCE src/lib/server/db_schema/db_create.sql;
+      #     SOURCE src/lib/server/db_schema/db_load.sql;
+      #     COMMIT;
+      #     EOSQL
 
       - name: Build & Push Docker image
         working-directory: ${{ github.workspace }}
