add db connection info

--- a/.env.local
+++ b/.env.local
@@ -1,12 +1,12 @@
-DB_HOST=localhost
+DB_HOST=35.197.171.70
 DB_USER=root
-DB_PASS=
+DB_PASS=JC3DNstrong@Password
 DB_NAME=qr_attendance_app
 
 BETTER_AUTH_SECRET=9NwcvVxTTSBLsjd1uxukjws38JtaahGN
-BETTER_AUTH_URL=http://localhost:3000 #Base URL of your app
+BETTER_AUTH_URL=https://jc3dn-nextjs-app-kosgs4isma-ts.a.run.app/ #Base URL of your app
 
 GOOGLE_CLIENT_ID=722448805136-8ufkc1224mj8u68b87l4fnmt721apn8e.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 
-BASE_URL=http://localhost:3000
+BASE_URL=https://jc3dn-nextjs-app-kosgs4isma-ts.a.run.app/
