--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,13 +17,7 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-      - name: Start Cloud SQL Proxy
-        uses: ahmadnassri/action-google-cloud-sql-proxy@v1
-        with:
-          key: ${{ secrets.GCP_SA_KEY }}
-          connection: project-capstone-468109:australia-southeast1:jc3dn-998-db
-          port: 3306
+          project_id: ${{ secrets.GCP_PROJECT_ID }}      
 
       - name: Configure Docker for GCR
         run: gcloud auth configure-docker gcr.io
@@ -40,15 +34,21 @@ jobs:
         run: |
           gcloud run deploy jc3dn-nextjs-app \
             --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/jc3dn-nextjs-app \
+            --add-cloudsql-instances=project-capstone-468109:australia-southeast1:jc3dn-998-db \
             --platform managed \
             --region ${{ secrets.GCP_REGION }} \
-            --allow-unauthenticated
+            --allow-unauthenticated \
+            --set-env-vars DB_USER=${{ secrets.DB_USER }},\              
+              DB_PASSWORD=${{ secrets.DB_PASSWORD }}, \
+              DB_NAME=${{ secrets.DB_NAME }}, \
+              BETTER_AUTH_SECRET=${{ secrets.BETTER_AUTH_SECRET }}
+
 
       # Step 3: Get deployed app info
       - name: Get Deployed Service URL
         run: |
           URL=$(gcloud run services describe jc3dn-nextjs-app \
             --platform managed \
-            --region ${{ secrets.GCP_REGION }} \
+            --region ${{ secrets.GCP_REGION }} \            
             --format 'value(status.url)')
           echo "Deployed URL: $URL"
