--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,20 +30,6 @@ jobs:
             --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/jc3dn-nextjs-app
 
       # Step 2: Deploy to Cloud Run
-      - name: Write env file for reading values from github action secrets
-        run: |
-          cat <<EOF > env.env
-          DB_USER=${{ secrets.DB_USER }}
-          DB_PASS=${{ secrets.DB_PASS }}
-          DB_NAME=${{ secrets.DB_NAME }}
-          BETTER_AUTH_SECRET=${{ secrets.BETTER_AUTH_SECRET }}
-          GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
-          GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
-          BASE_URL=${{ secrets.BASE_URL }}
-          GCP_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }}
-          GCP_REGION=${{ secrets.GCP_REGION }}
-          DB_INSTANCE=${{ secrets.DB_INSTANCE }}
-          EOF
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy jc3dn-nextjs-app \
@@ -52,7 +38,7 @@ jobs:
             --platform managed \
             --region ${{ secrets.GCP_REGION }} \
             --allow-unauthenticated \
-            --env-vars-file env.env
+            --set-env-vars DB_USER=${{ secrets.DB_USER}},DB_PASS=${{ secrets.DB_PASS}},DB_NAME=${{ secrets.DB_NAME}},BETTER_AUTH_SECRET=${{ secrets.BETTER_AUTH_SECRET}},GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID}},GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET}},BASE_URL=${{secrets.BASE_URL}},GCP_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }},GCP_REGION=${{secrets.GCP_REGION}},DB_INSTANCE=${{secrets.DB_INSTANCE}}
 
       # Step 3: Get deployed app info
       - name: Get Deployed Service URL
