--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,7 +32,7 @@ jobs:
       # Step 2: Deploy to Cloud Run
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy jc3dn-nextjs-app \
+          gcloud run deploy jc3dn-qr-attendance \
             --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/jc3dn-nextjs-app \
             --set-cloudsql-instances=project-capstone-468109:australia-southeast1:jc3dn-998-db \
             --platform managed \
@@ -43,7 +43,7 @@ jobs:
       # Step 3: Get deployed app info
       - name: Get Deployed Service URL
         run: |
-          URL=$(gcloud run services describe jc3dn-nextjs-app \
+          URL=$(gcloud run services describe jc3dn-qr-attendance \
             --platform managed \
             --region ${{ secrets.GCP_REGION }} \
             --format 'value(status.url)')
