--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start -p $PORT",
+    "build": "next build",    
+    "start": "next start",
     "lint": "next lint",
     "auth:migrate": "dotenv -e .env.local -- npx @better-auth/cli migrate"
   },
@@ -24,12 +24,13 @@
     "lucide-react": "^0.488.0",
     "mysql2": "^3.14.1",
     "next": "15.3.0",
+    "next-swagger-doc": "^0.4.1",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.55.0",
-    "swagger-jsdoc": "^6.2.8",
+    "react-hook-form": "^7.55.0",    
+    "swagger-ui-react": "^5.3.2",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2",
@@ -38,15 +39,16 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.10",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/react-dom": "^19",    
+    "@types/swagger-ui-react": "^5.18.0",
     "dotenv-cli": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
