--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -3,7 +3,7 @@ name: Execute SQL scripts on Cloud SQL
 on:
   push:
     branches:
-      - deployment
+      - db-deployment
 
 jobs:
   execute-sql:
