--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "check": "tsc --noEmit && npm run lint",
     "auth:migrate": "dotenv -e .env.local -- npx @better-auth/cli migrate"
   },
   "dependencies": {
