--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   execute-sql:
     runs-on: ubuntu-latest
+    environment: GCP_PROJECT_ID
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
