fix gcloud auth

--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Authenticate to gcloud
         uses: google-github-actions/auth@v2
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Install MySQL client
