--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -33,7 +33,9 @@ jobs:
           INSTANCE_CONNECTION_NAME="${{ secrets.GCP_PROJECT_ID }}:${{ secrets.GCP_REGION }}:${{ secrets.DB_INSTANCE }}"
 
           # Start the proxy in the background
-          ./cloud-sql-proxy "$INSTANCE_CONNECTION_NAME" &
+          ./cloud-sql-proxy \
+          --credentials-file ${{ secrets.GCP_SA_KEY }} \
+          "$INSTANCE_CONNECTION_NAME" &
           PROXY_PID=$!
 
           # Give the proxy a moment to connect
