--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -29,16 +29,22 @@ jobs:
 
       - name: Run SQL scripts on Cloud SQL
         run: |
-          # Build the connection name: PROJECT_ID:REGION:INSTANCE
+          set -e  # Exit on any error
+          trap 'kill $PROXY_PID' EXIT  # Always kill proxy when script ends
+
+          # Build connection name: PROJECT_ID:REGION:INSTANCE
           INSTANCE_CONNECTION_NAME="${{ secrets.GCP_PROJECT_ID }}:${{ secrets.GCP_REGION }}:${{ secrets.DB_INSTANCE }}"
 
-          # Start the proxy in the background
-          ./cloud-sql-proxy --credentials-file ${{ secrets.GCP_SA_KEY }} "$INSTANCE_CONNECTION_NAME" & PROXY_PID=$!
+          # Start proxy with credentials file in background
+          echo "${{ secrets.GCP_SA_KEY }}" > sa-key.json
+          ./cloud-sql-proxy "$INSTANCE_CONNECTION_NAME" \
+              --credentials-file sa-key.json &
+          PROXY_PID=$!
 
-          # Give the proxy a moment to connect
+          # Give proxy time to start
           sleep 5
 
-          # Run SQL scripts in order
+          # Execute SQL scripts in sequence
           mysql -u ${{ secrets.DB_USER }} \
                 -p${{ secrets.DB_PASS }} \
                 -D ${{ secrets.DB_NAME }} \
@@ -56,6 +62,3 @@ jobs:
                 -D ${{ secrets.DB_NAME }} \
                 -h 127.0.0.1 \
                 < src/lib/server/db_schema/db_load.sql
-
-          # Stop the proxy so the job can finish
-          kill $PROXY_PID
