--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -21,7 +21,7 @@ jobs:
       
       - name: Authenticate to cloud sql proxy
         run: |
-          gcloud auth application-default login
+          gcloud auth application-default login --quiet
 
       - name: Install MySQL client
         run: sudo apt-get update && sudo apt-get install -y mysql-client
@@ -32,33 +32,7 @@ jobs:
           chmod +x cloud-sql-proxy
 
       - name: Run SQL scripts on Cloud SQL
-        run: |
-          set -e  # Exit on any error
-          trap 'kill $PROXY_PID' EXIT  # Ensure proxy stops at the end
-
-          # Build the connection name: PROJECT_ID:REGION:INSTANCE
-          INSTANCE_CONNECTION_NAME="${{ secrets.GCP_PROJECT_ID }}:${{ secrets.GCP_REGION }}:${{ secrets.DB_INSTANCE }}"
-
-          # Save service account key to a file
-          echo "${{ secrets.GCP_SA_KEY }}" > sa-key.json
-
-          # Start Cloud SQL Auth Proxy on port 3306
-          ./cloud-sql-proxy \
-            --port 3306 \
-            "$INSTANCE_CONNECTION_NAME" \
-            --credentials-file sa-key.json &
-          PROXY_PID=$!
-
-          # Wait for the proxy to be ready
-          for i in {1..10}; do
-            if nc -z 127.0.0.1 3306; then
-              echo "✅ Cloud SQL Proxy is ready"
-              break
-            fi
-            echo "⏳ Waiting for Cloud SQL Proxy..."
-            sleep 2
-          done
-
+        run: |          
           # Run SQL scripts in sequence
           for script in db_drop.sql db_create.sql db_load.sql; do
             echo "▶️ Running $script..."
