--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -11,29 +11,41 @@ jobs:
     environment: GCP_PROJECT_ID
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Authenticate to gcloud
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-      
-      - name: Authenticate to cloud sql proxy
-        run: |
-          gcloud auth application-default login --quiet
-
-      - name: Install MySQL client
-        run: sudo apt-get update && sudo apt-get install -y mysql-client
+        uses: actions/checkout@v4      
 
       - name: Download Cloud SQL Auth Proxy
         run: |
           curl -o cloud-sql-proxy https://dl.google.com/cloudsql/cloud-sql-proxy.linux.amd64
           chmod +x cloud-sql-proxy
 
+      - name: Start Cloud SQL Auth Proxy
+        run: |
+          # Save the service account JSON key from secrets to a file
+          echo "${{ secrets.GCP_SA_KEY }}" > sa-key.json
+
+          # Build the connection name from secrets
+          INSTANCE_CONNECTION_NAME="${{ secrets.GCP_PROJECT_ID }}:${{ secrets.GCP_REGION }}:${{ secrets.DB_INSTANCE }}"
+
+          # Start the Cloud SQL Auth Proxy with credentials file
+          ./cloud-sql-proxy \
+            --credentials-file sa-key.json \
+            "$INSTANCE_CONNECTION_NAME" &
+          echo $! > proxy.pid
+
+          # Wait until the proxy is ready (check if port 3306 is open)
+          for i in {1..10}; do
+            if nc -z 127.0.0.1 3306; then
+              echo "✅ Cloud SQL Proxy is ready"
+              break
+            fi
+            echo "⏳ Waiting for Cloud SQL Proxy..."
+            sleep 2
+          done
+
+
       - name: Run SQL scripts on Cloud SQL
-        run: |          
-          # Run SQL scripts in sequence
+        run: |
+          set -e  # Exit immediately if a command fails
           for script in db_drop.sql db_create.sql db_load.sql; do
             echo "▶️ Running $script..."
             mysql -u ${{ secrets.DB_USER }} \
@@ -43,3 +55,11 @@ jobs:
                   -P 3306 \
                   < src/lib/server/db_schema/$script
           done
+          
+      - name: Stop Cloud SQL Auth Proxy and clean up
+        run: |
+          if [ -f proxy.pid ]; then
+            kill $(cat proxy.pid) || true
+            echo "🛑 Cloud SQL Proxy stopped"
+          fi
+          rm -f proxy.pid sa-key.json
