--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -17,11 +17,19 @@ jobs:
         run: |
           curl -o cloud-sql-proxy https://dl.google.com/cloudsql/cloud-sql-proxy.linux.amd64
           chmod +x cloud-sql-proxy
+      
+      - name: Cloud sql auth proxy help 
+        run: |
+          ./cloud-sql-proxy --help
 
       - name: Start Cloud SQL Auth Proxy
         run: |
           # Save the service account JSON key from secrets to a file
           echo "${{ secrets.GCP_SA_KEY }}" > sa-key.json
+
+          # list files to verify the key is saved
+          echo "Listing files in the current directory:"          
+          ls -la
 
           # Build the connection name from secrets
           INSTANCE_CONNECTION_NAME="${{ secrets.GCP_PROJECT_ID }}:${{ secrets.GCP_REGION }}:${{ secrets.DB_INSTANCE }}"
@@ -55,7 +63,7 @@ jobs:
                   -P 3306 \
                   < src/lib/server/db_schema/$script
           done
-          
+
       - name: Stop Cloud SQL Auth Proxy and clean up
         run: |
           if [ -f proxy.pid ]; then
