--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -16,7 +16,11 @@ jobs:
       - name: Download Cloud SQL Auth Proxy
         run: |
           curl -o cloud-sql-proxy https://dl.google.com/cloudsql/cloud-sql-proxy.linux.amd64
-          chmod +x cloud-sql-proxy          
+          chmod +x cloud-sql-proxy       
+
+      - name: Cloud SQL Proxy Help
+        run: |
+          ./cloud-sql-proxy --help   
 
       - name: Start Cloud SQL Auth Proxy
         run: |
