--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -32,11 +32,11 @@ jobs:
           ls -la
 
           # Build the connection name from secrets
-          INSTANCE_CONNECTION_NAME="${{ secrets.GCP_PROJECT_ID }}:${{ secrets.GCP_REGION }}:${{ secrets.DB_INSTANCE }}"
+          INSTANCE_CONNECTION_NAME="${{ secrets.GCP_PROJECT_ID }}:${{ secrets.GCP_REGION }}:${{ secrets.DB_INSTANCE }}"          
 
           # Start the Cloud SQL Auth Proxy with credentials file
           ./cloud-sql-proxy \
-            --credentials-file sa-key.json \
+            --credentials-file ${{secrets.GCP_SA_KEY}} \
             "$INSTANCE_CONNECTION_NAME" &
           echo $! > proxy.pid
 
